compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_field_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        pub type Person {\n            Person(name: String)\n        };\n        pub fn update_person(person: Person) {\n            Person(..person, foo: 5)\n        }"

---

error: Unknown record field
  ┌─ /src/one/two.gleam:6:28
  │
6 │             Person(..person, foo: 5)
  │                            ^^^^^^^^ did you mean `name`?

The record being updated has this type:

    Person

It has these fields:

    .name

